--- a/src/main/resources/fxml/Comment.fxml
+++ b/src/main/resources/fxml/Comment.fxml
@@ -11,9 +11,10 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="280.0" style="-fx-background-color: yellow;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.CommentController">
+<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="240.0" style="-fx-background-color: yellow;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.CommentController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     </columnConstraints>
@@ -33,13 +34,9 @@
             </rowConstraints>
             <children>
                 <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: green;">
-                    <children>
-                        <ImageView fx:id="profile" fitHeight="38.0" fitWidth="51.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../images/sampleProfilePhoto3.png" />
-                            </image>
-                        </ImageView>
-                    </children>
+               <children>
+                  <Circle fx:id="userProfile" fill="DODGERBLUE" radius="17.0" stroke="BLACK" strokeType="INSIDE" />
+               </children>
                 </VBox>
                 <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
                     <children>
