--- a/src/main/resources/fxml/ForgotPassword.fxml
+++ b/src/main/resources/fxml/ForgotPassword.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane prefHeight="735.0" prefWidth="502.0" style="-fx-background-color: Orange;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ForgotPasswordController">
+<GridPane prefHeight="735.0" prefWidth="502.0" style="-fx-background-color: Orange;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.StartControllers.ForgotPasswordController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
    </columnConstraints>
