--- a/src/main/resources/fxml/ShowAnotherUserPage.fxml
+++ b/src/main/resources/fxml/ShowAnotherUserPage.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -14,7 +15,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="735.0" prefWidth="892.0" style="-fx-background-color: #003459;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ShowAnotherUserPageController">
+<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="735.0" prefWidth="892.0" style="-fx-background-color: #003459;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.OtherUserPageControllers.ShowAnotherUserPageController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
@@ -173,22 +174,34 @@
                      <children>
                         <HBox alignment="CENTER" prefHeight="71.0" prefWidth="200.0" GridPane.rowIndex="2">
                            <children>
-                              <Button mnemonicParsing="false" onAction="#showFollowersOFUser" style="-fx-background-color: #ffb703; -fx-background-radius: 50;" text="SHOW FOLLOWERS" />
+                              <Button mnemonicParsing="false" onAction="#showFollowersOFUser" style="-fx-background-color: #ffb703; -fx-background-radius: 50;" text="SHOW FOLLOWERS">
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor></Button>
                            </children>
                         </HBox>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="3">
                            <children>
-                              <Button mnemonicParsing="false" onAction="#showFollowingOfUser" style="-fx-background-color: #ffb703; -fx-background-radius: 50;" text="SHOW FOLLOWINGS" />
+                              <Button mnemonicParsing="false" onAction="#showFollowingOfUser" style="-fx-background-color: #ffb703; -fx-background-radius: 50;" text="SHOW FOLLOWINGS">
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor></Button>
                            </children>
                         </HBox>
                         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
                            <children>
-                              <Button fx:id="followOrUnFollow" mnemonicParsing="false" onAction="#followOrUnfollow" style="-fx-background-color: #ffb703; -fx-background-radius: 50;" text="FOLLOW/UNFOLLOW" />
+                              <Button fx:id="followOrUnFollow" mnemonicParsing="false" onAction="#followOrUnfollow" style="-fx-background-color: #ffb703; -fx-background-radius: 50;" text="FOLLOW/UNFOLLOW">
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor></Button>
                            </children>
                         </VBox>
                         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <Button mnemonicParsing="false" onAction="#sendMessage" style="-fx-background-color: #ffb703; -fx-background-radius: 50;" text="SEND MESSAGE" />
+                              <Button mnemonicParsing="false" onAction="#sendMessage" style="-fx-background-color: #ffb703; -fx-background-radius: 50;" text="SEND MESSAGE">
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor></Button>
                            </children>
                         </VBox>
                      </children>
