--- a/src/main/resources/fxml/MainPage.fxml
+++ b/src/main/resources/fxml/MainPage.fxml
@@ -22,7 +22,7 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <GridPane gridLinesVisible="true" style="-fx-background-color: Blue; -fx-border-color: black;">
+      <GridPane gridLinesVisible="true">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="100.0" prefWidth="100.0" />
         </columnConstraints>
@@ -32,11 +32,11 @@
           <RowConstraints minHeight="10.0" percentHeight="6.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <ScrollPane fitToWidth="true" prefHeight="246.0" prefWidth="54.0" style="-fx-background-color: green;" GridPane.rowIndex="1">
+            <ScrollPane fitToWidth="true" prefHeight="246.0" prefWidth="54.0" GridPane.rowIndex="1">
                <content>
-                  <VBox prefHeight="761.0" prefWidth="151.0" style="-fx-background-color: orange;">
+                  <VBox prefHeight="761.0" prefWidth="151.0">
                      <children>
-                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="151.0" style="-fx-background-color: orange;">
+                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="151.0">
                            <children>
                               <GridPane alignment="CENTER">
                                  <columnConstraints>
@@ -80,7 +80,7 @@
                               </GridPane>
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="151.0" style="-fx-background-color: orange;">
+                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="151.0">
                            <children>
                               <GridPane>
                                  <columnConstraints>
@@ -128,7 +128,7 @@
                               </GridPane>
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="151.0" style="-fx-background-color: orange;">
+                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="151.0">
                            <children>
                               <GridPane>
                                  <columnConstraints>
@@ -166,7 +166,7 @@
                               </GridPane>
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="151.0" style="-fx-background-color: orange;">
+                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="151.0">
                            <children>
                               <GridPane>
                                  <columnConstraints>
@@ -204,7 +204,7 @@
                               </GridPane>
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="151.0" style="-fx-background-color: orange;">
+                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="151.0">
                            <children>
                               <GridPane>
                                  <columnConstraints>
@@ -242,7 +242,7 @@
                               </GridPane>
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="151.0" style="-fx-background-color: orange;">
+                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="151.0">
                            <children>
                               <GridPane>
                                  <columnConstraints>
@@ -280,7 +280,7 @@
                               </GridPane>
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="151.0" style="-fx-background-color: orange;">
+                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="151.0">
                            <children>
                               <GridPane>
                                  <columnConstraints>
@@ -318,7 +318,7 @@
                               </GridPane>
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="151.0" style="-fx-background-color: orange;">
+                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="151.0">
                            <children>
                               <GridPane>
                                 <columnConstraints>
@@ -356,7 +356,7 @@
                               </GridPane>
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="151.0" style="-fx-background-color: orange;">
+                        <HBox alignment="CENTER" prefHeight="65.0" prefWidth="151.0">
                            <children>
                               <GridPane>
                                  <columnConstraints>
@@ -407,7 +407,7 @@
                   </ImageView>
                </children>
             </HBox>
-            <HBox fx:id="LogOutButton" alignment="CENTER" prefHeight="69.0" prefWidth="113.0" style="-fx-background-color: Red;" GridPane.rowIndex="2">
+            <HBox fx:id="LogOutButton" alignment="CENTER" prefHeight="69.0" prefWidth="113.0" GridPane.rowIndex="2">
                <children>
                   <ImageView fitHeight="36.0" fitWidth="48.0" onMouseClicked="#Exit" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -426,7 +426,7 @@
             </HBox>
          </children>
       </GridPane>
-      <GridPane fx:id="main" gridLinesVisible="true" style="-fx-background-color: Green;" GridPane.columnIndex="1">
+      <GridPane fx:id="main" gridLinesVisible="true" GridPane.columnIndex="1">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
